added upto subscription part

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <section class="gift-section w-[87.5%] mx-auto my-28">
             <div class="gift-content mb-10 text-center md:text-start">
                 <h5 class="font-[Inter] font-medium text-2xl text-[#FF0000]">THE BEST GIFTS</h5>
-                <h2 class="font-[Merriweather] text-5xl font-black my-5">Our Awesome Portfolio</h2>
+                <h2 class="font-[Merriweather] text-5xl font-black text-[#070211] my-5">Our Awesome Portfolio</h2>
                 <p class="font-[Inter] text-xl text-gray-500">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
             <div class="gift-galley">
@@ -174,9 +174,29 @@
         <!-- Gift section Area end here -->
 
         <!-- ======================================================================== -->
+        
+        <!-- Subscription Area start here -->
+        <section class="subscribe-section w-[87.5%] mx-auto bg-[#FF000014] my-20 py-20 px-10 rounded-2xl">
+           <div class="subscription-content flex flex-col justify-center items-center">
+                <div class="mail-image">
+                    <img src="assests/images/Group 61.png" alt="">
+                </div>
+                <h1 class="font-[Merriweather] font-black text-5xl text-center text-[#070211] my-8">Subscribe Newsletter</h1>
+                <p class="font-[Inter] text-xl text-center text-gray-500">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <div class="input-area mt-9 flex justify-center items-center w-[90%] h-auto lg:w-full">
+                    <input type="text" name="" id="" placeholder="user@gmail.com" class="font-[Inter] w-[438px] h-[72px] md:text-lg ps-5 bg-white rounded-s-[50px]">
+                    <input type="submit" value="Subscribe" class="font-[Inter] w-[210px] h-[72px] bg-[#FF0000] font-semibold md:text-xl text-white rounded-e-[50px] px-5 md:px-0">
+                </div>
+           </div>
+        </section>
+        <!-- Subscription Area end here -->
+
+        <!-- ======================================================================== -->
     </main>
     <footer>
-
+        <div class="footer-section">
+            
+        </div>
     </footer>
 </body>
 </html>
