complete project has submitted

--- a/index.html
+++ b/index.html
@@ -96,18 +96,18 @@
         <!-- ======================================================================== -->
         
         <!-- Middle description start here -->
-        <section class="MiddleDes-section w-[87.5%] mx-auto my-28 flex flex-col md:flex-row justify-around items-center gap-16">
+        <section class="MiddleDes-section w-[87.5%] mx-auto my-28 flex flex-col md:flex-row justify-around items-center gap-14 md:gap-8 lg:gap-14">
             <div class="LeftDescription md:w-4/12 text-center md:text-start">
-                <h6 class="font-[Inter] text-2xl md:text-base lg:text-2xl font-medium text-[#FF0000]">NEW BEST OFFER</h6>
-                <h3 class="font-[Merriweather] text-5xl text-[#070211] md:text-2xl lg:text-5xl font-black my-4">Coming Soon</h3>
-                <p class="font-[Inter] md:text-xs lg:text-xl text-gray-500">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <h6 class="font-[Inter] text-2xl md:text-base lg:text-xl xl:text-2xl font-medium text-[#FF0000]">NEW BEST OFFER</h6>
+                <h3 class="font-[Merriweather] text-5xl text-[#070211] md:text-2xl lg:text-4xl xl:text-5xl font-black my-4">Coming Soon</h3>
+                <p class="font-[Inter] md:text-xs lg:text-base xl:text-xl text-gray-500">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
-            <div class="MiddleDescription md:w-4/12 border-[#FF0000] border-8 p-7 rounded-[50%] overflow-hidden">
-                <img src="assests/images/Ellipse 1.png" alt="">
+            <div class="MiddleDescription md:w-4/12 border-[#FF0000] border-10 md:border-8 lg:border-10 p-7 md:p-5 lg:p-6 xl:p-7 rounded-[50%] overflow-hidden">
+                <img src="assests/images/Ellipse 1.png" alt="" class="w-full">
             </div>
             <div class="RightDescription md:w-4/12 font-[Inter] text-center md:text-start">
-                <h3 class="text-5xl md:text-2xl lg:text-5xl font-bold text-[#FF0000]">2024</h3>
-                <p class="font-[Inter] md:text-xs lg:text-xl text-gray-500 my-4">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <h3 class="text-5xl md:text-2xl lg:text-4xl xl:text-5xl font-bold text-[#FF0000]">2024</h3>
+                <p class="font-[Inter] md:text-xs lg:text-base xl:text-xl text-gray-500 my-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
                 <div class="w-[150px] md:w-[80px] lg:w-full mx-auto md:mx-start">
                     <img src="assests/images/Group 96.png" alt="" class="max-w-full">
                 </div>
